fix: correct mobile menu button alignment vol.4

--- a/src/sass/blocks/mobile-catalog.scss
+++ b/src/sass/blocks/mobile-catalog.scss
@@ -30,11 +30,12 @@
 .mobile-catalog__back-link {
   @include link-reset();
   @include main-font(18px, 18px, 18px, 400);
+  position: relative;
   display: flex;
   align-items: center;
   width: 100%;
   margin-bottom: 17px;
-  padding: 19px 0 19px 7px;
+  padding: 19px 0 19px 30px;
   border-bottom: 1px solid #525252;
   color: #a4a4a4;
 
@@ -45,6 +46,9 @@
 }
 
 .mobile-catalog__link-icon {
+  position: absolute;
+  top: 21px;
+  left: 7px;
   margin-right: 15px;
   fill: transparent;
   stroke: #a4a4a4;
